# wordcloudDemo

./: README.md  pyproject.toml
src/wordclouddemo/: __init__.py  main.py  socrates.txt
